@startuml der

entity Rol {
    * id_rol : int (PK)
    --
    * nombre : varchar(50)
}

entity Usuario {
  * id_usuario : int
  --
  nombre : varchar
  apellido : varchar
  dni : int
  mail : varchar
  contrasena : varchar
  id_rol : int (FK)
  habilitado : boolean
  
}

entity Aula {
  * id_aula : int
  --
  nombre : varchar
  capacidad : int
  piso : int
  ubicacion : varchar
}

entity Evento {
  * id_evento : int
  --
  titulo : varchar
  tipo : varchar
  fecha : date
  horaInicio : time
  horaFin : time
  estado : varchar
}

entity Notificacion {
  * id_notificacion : int
  --
  mensaje : varchar
  fecha : datetime
  leida : boolean
}

entity Aviso {
  * id_aviso : int
  --
  mensaje : varchar
  fecha : datetime
}

' RELACIONES

note right of Rol
Valores posibles:
- User
- Admin
- Teacher
end note

note right of Usuario
Usuario (muchos) → Rol (uno)
  rol: int (FK)         id_rol: int (PK)
end note

Usuario ||--o{ Evento : responsable
Aula ||--o{ Evento : asignada

Usuario ||--o{ Notificacion : recibe
Evento ||--o{ Notificacion : genera

Usuario ||--o{ Aviso : crea
Evento ||--o{ Aviso : contiene

Usuario ||--o{ Rol : asignada

@enduml